[gd_scene load_steps=2 format=3 uid="uid://qmw3dfvrhgcp"]

[ext_resource type="Script" uid="uid://xjf1njxjie4r" path="res://helpers/highlightable.gd" id="1_licae"]

[node name="Highlightable" type="Area2D"]
script = ExtResource("1_licae")

[node name="Shape" type="CollisionShape2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
